[tool.poetry]
name = "cytoplots"
version = "0.1.1"
description = "Plotting library for cytometry data"
license = "MIT"
authors = ["burtonrj <burtonrj@cardiff.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
cytotools = "^0.1.1"
seaborn = "^0.11.2"
statannotations = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
